# CFD_essentials

./: .gitignore  BoundaryConditions.cpp  BoundaryConditions.hpp  CMakeLists.txt  ColorRamp.cpp  ColorRamp.hpp  Converter.cpp  Converter.hpp  Equation.cpp  Equation.hpp  EquationTerm.hpp  FDOperator.hpp  FDTDSimulation.cpp  FDTDSimulation.hpp  GeometricObject.cpp  GeometricObject.hpp  Hull.cpp  Hull.hpp  Issues.txt  LinAlgWrapper.hpp  LookupTable.hpp  Mesh.cpp  Mesh.hpp  OperatorTerm.hpp  PlasmaDriftDiffusionSimulation.cpp  PlasmaDriftDiffusionSimulation.hpp  PlasmaMomentumSimulation.cpp  PlasmaMomentumSimulation.hpp  PointCloud.cpp  PointCloud.hpp  PoissonSimulation.cpp  PoissonSimulation.hpp  README.md  RegularMesh.cpp  RegularMesh.hpp  SignalAnalyzer.hpp  SignalGenerator.cpp  SignalGenerator.hpp  Simulation.hpp  SimulationData.cpp  (+35 more)
fdtd1d/: CMakeLists.txt  fdtd1d.cpp
fdtd2d/: CMakeLists.txt  fdtd2d.cpp
fdtdsim/: CMakeLists.txt  fdtdsim.cpp
petsc_test/: CMakeLists.txt  petsc_test.cpp
plasma_diffusion/: CMakeLists.txt  plasma_diffusion.cpp
plasma_momentum/: CMakeLists.txt  plasma_momentum.cpp
plasma_wave/: CMakeLists.txt  plasma_wave.cpp
playground/: CMakeLists.txt  playground.cpp
poisson_evolve/: CMakeLists.txt  PoissonEvolve.cpp
poisson_example/: CMakeLists.txt  PoissonSolve.cpp
poisson_example/cmake/Modules/: FindPETSc.cmake
poisson_sim/: CMakeLists.txt  poisson_sim.cpp
srr_example/: CMakeLists.txt  SplitRingSolve.cpp
testfiles/: backward_facing_step_32_8_8.xml
todo/: InitialConditions.hpp  converter.hpp
unused/: BoundaryConditions.cpp  Equation.cpp  EquationTerm.cpp  EquationTerm.hpp  Simulation.hpp  cvectortest.cpp  integration.cpp  integration.hpp  interpolation.cpp  interpolation.hpp
