CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(petsc_test)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
SET(CMAKE_CXX_COMPILER "${PETSC_DIR}/${PETSC_ARCH}/bin/mpicc")

FIND_PACKAGE(PETSc REQUIRED)

INCLUDE_DIRECTORIES(${PETSC_INCLUDES})
ADD_DEFINITIONS(${PETSC_DEFINITIONS})

ADD_EXECUTABLE(petsc_test petsc_test.cpp)

TARGET_LINK_LIBRARIES(petsc_test ${PETSC_LIBRARIES})
